--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "rc-mask",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "mask Component for react",
   "repository": {
     "type": "git",
     "url": "https://github.com/rc-component/mask.git"
   },
   "keywords": [
+    "react-component",
     "mask"
   ],
   "license": "MIT",
