--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc-mask",
-  "version": "0.0.6",
+  "version": "1.0.0",
   "description": "mask Component for react",
   "repository": {
     "type": "git",
@@ -20,33 +20,34 @@
     "publish-storybook": "bash .scripts/publish_storybook.sh"
   },
   "devDependencies": {
-    "@kadira/storybook": "^1.12.0",
-    "babel-cli": "^6.5.0",
-    "babel-core": "^6.5.0",
-    "babel-runtime": "^6.5.0",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.5.0",
-    "babel-polyfill": "^6.5.0",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-preset-stage-2": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "git-url-parse": "^6.0.1",
-    "jsdom": "^9.1.0",
-    "mocha": "^2.4.5",
-    "postcss-cssnext": "^2.5.2",
-    "postcss-loader": "^0.9.1",
-    "style-loader": "^0.13.1",
+    "@kadira/storybook": "^2.35.3",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-runtime": "^6.23.0",
+    "css-loader": "^0.28.4",
+    "jsdom": "^11.1.0",
+    "mocha": "^3.4.2",
+    "postcss-cssnext": "^2.11.0",
+    "postcss-loader": "^2.0.6",
     "raw-loader": "^0.5.1",
-    "react": "^15.0.0",
-    "react-addons-test-utils": "^15.0.0",
-    "sinon": "^1.17.3",
-    "webpack": "^1.13.0"
+    "react-addons-test-utils": "^15.6.0",
+    "sinon": "^2.3.6",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.0.0"
   },
   "dependencies": {
-    "rc-overlay": "0.1.1",
-    "rc-spinner": "0.0.3",
+    "prop-types": "^15.5.10",
+    "rc-overlay": "^1.0.0",
+    "rc-spinner": "0.0.4"
+  },
+  "peerDependencies": {
     "react": "^15.0.0",
     "react-dom": "^15.0.0"
   },
