--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "dependencies": {
     "prop-types": "^15.5.10",
     "rc-overlay": "^1.0.0",
-    "rc-spinner": "0.0.4"
+    "rc-spinner": "^1.0.2"
   },
   "peerDependencies": {
     "react": "^15.0.0",
